# catkb

./: .env.example  .gitignore  Caddyfile.dev  Cargo.toml  Gemfile  README.md  config.ru  flake.nix  functions.sql  init.sql  package-lock.json  package.json  svelte.config.js
config/: sidekiq.yml
crates/barcoder/: Cargo.toml
crates/barcoder/src/: encode.rs  main.rs
lib/: catkb.rb
lib/catkb/: barcode.rb  binvoke.rb  cache.rb  database.rb  id.rb  pdfgen.rb  pushover.rb  sidekiq.rb  store_api.rb  utils.rb  version.rb  workers.rb
lib/catkb/pdfgen/: barcode_labels.rb
lib/catkb/store_api/: barcode.rb  container.rb  image.rb  note.rb  package_tracking.rb  part.rb  project.rb  search.rb  serial_lookup.rb
lib/catkb/workers/: image_sizer.rb  package_tracking.rb  serial_lookup.rb
scripts/: console
src/: app.html  hooks.client.ts
src/components/: BarcodeInput.svelte  Editor.svelte  ImageUpload.svelte  Modal.svelte  Timestamp.svelte
src/lib/: storeFetch.ts
src/routes/: +layout.svelte  +page.svelte
src/routes/container/[id]/: +layout.ts  +page.svelte  +page.ts
src/routes/note/[id]/: +page.svelte  +page.ts
src/routes/packagetrack/: +page.svelte
src/routes/search/: +page.ts
src/service-worker/: index.ts
static/: manifest.json  styles.css
web/: README.md  flake.nix  package-lock.json  package.json
web/src/: app.html
web/src/components/: ActionBar.svelte  HeaderParentLink.svelte
web/src/lib/: portal.ts  storeFetch.ts
web/src/routes/: +error.svelte  +layout.svelte  +page.svelte
web/src/service-worker/: index.ts
web/static/: styles.css
(+61 files in other folders)
