[package]
name = "catkb_barcoder"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
svg = { version = "0.16" }
rxing = { version = "0.5", default-features = false, features = ["svg_write"] }
